# mcp777

./: .gitignore  .travis.yml  CMakeLists.txt  mcp777.code-workspace  readme.md
assets/: mcp777.xml
cmd/: CMakeLists.txt
cmd/mcp777/: main.cc
pkg/: CMakeLists.txt
pkg/io/: CMakeLists.txt
pkg/io/src/io/: seven_segment.h
pkg/mcp/: CMakeLists.txt
pkg/mcp/src/mcp/: mcp777.cc  mcp777.h
pkg/mcp/tests/: test_mcp777.cc
pkg/net/: CMakeLists.txt
pkg/net/src/net/: udp.cc  udp.h
scripts/: build
